# obscure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  update_submodules.sh
python/: model_conversion.py  requirements.txt
src/: obscure.cpp
